syntax = "proto3";

package trezoitao;
option go_package= "trezoitao/proto";

message GiveMeBTCRequest {
    string key = 1;
    int32 amount = 2;
}

message GiveMeBTCResponse {
    string message = 1;
    string status = 2;
}

service TrezoitaoService {
    rpc GetBTC (GiveMeBTCRequest) returns (GiveMeBTCResponse);
}